# oximachine_featurizer

./: .bumpversion.cfg  .gitattributes  .gitignore  .pre-commit-config.yaml  .prospector.yaml  .pylintrc  ABINEF.slurm  CHANGELOG.md  CHANGELOG.rst  LICENSE  MANIFEST.in  README.md  Untitled.ipynb  clashing_atoms.pkl  conftest.py  environment.yml  featurize.py  names_to_sample.pkl  parse.py  play_w_pmg_api.ipynb  pyproject.toml  requirements.txt  setup.cfg  setup.py  structures_to_sample.ipynb  test_matminer.ipynb  tox.ini  utils.py  versioneer.py
analysis/: 2019-8-20-analyse_ox_state_dist.ipynb  2019-9-7-periodic_table_mofs.ipynb  20190820-173457-csd_ox_parse_output.pkl  name_list.pkl  statistics.pkl  structures_to_sample.ipynb
docs/: api.rst  conf.py  environment.yml  getting_started.rst  index.rst
examples/: example.ipynb
featurization/: ABAXOT.pkl  ABAXUZ.pkl  ABAZAF.pkl  ABIREJ.pkl  ABITIP.pkl  ABOXAR.pkl  ABPZCU01.pkl  ACEKUQ.pkl  ACESMN.pkl  ACIFOI.pkl  ACIJEB.pkl  ACIROV.pkl  ACODEE.pkl  ACOLOV.pkl  ACOZAW.pkl  ACOZEA.pkl  ACUDEJ.pkl  ACUXUU.pkl  ADADEP.pkl  ADEZOB.pkl  ADILIJ01.pkl  ADINCU.pkl  ADIQAG.pkl  ADIQAH.pkl  ADIXUH.pkl  ADOFOO.pkl  ADOKAG.pkl  ADONEP.pkl  ADOVIZ.pkl  ADUJIV.pkl  ADUTID01.pkl  ADUTID02.pkl  AFEGIE.pkl  AFEKAX.pkl  AFIKAE.pkl  AFUDUD.pkl  AFUJOA.pkl  AFURUR.pkl  AGABIU.pkl  AGIBAU.pkl  (+2157 more)
mine_mof_oxstate/: _version.py  crystalnn.py  exclude.py  featurize (kevin-ThinkPad-X1-Yoga-2nd's conflicted copy 2019-09-25).py  featurize.py  featurizer_local_property.py  mine_mp.py  mp_parsing_results.csv  parse.py  timeout.py  utils.py
oximachine_featurizer/: __init__.py  _version.py  crystalnn.py  exclude.py  featurize.py  featurizer_local_property.py  mine_mp.py  parse.py  space_group_analyzer.py  utils.py
run/: _featurecollect_mp_solids.py  _featurize_mp_structures.py  _run_chemical_formulas.py  (+21 more)
(+26 files in other folders)
