[build-system]
requires = ['flit_core >=3.4,<4']
build-backend = 'flit_core.buildapi'

[project]
name = "oximachine-featurizer"
dynamic = ['version']
description = "Mine MOF oxidation states and featurize metal sites."
authors = [
    { name = 'Kevin M. Jablonka' },
]
readme = 'README.md'
license = {file = 'LICENSE'}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Chemistry",
    'License :: OSI Approved :: MIT License',
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
]
requires-python = '>=3.8'
dependencies = [
    'ase~=3.0',
    'tqdm~=4.0',
    'click~=8.1',
    'matminer~=0.6',
    'numba~=0.57'
]

[project.urls]
Homepage = "https://github.com/kjappelbaum/oximachine_featurizer"

[project.optional-dependencies]
full = [
    'numeral~=0.1',
    'apricot-select~=0.6',
    'scikit-multilearn~=0.2',
]
dev = [
    "ruff",
    "pytest",
    "isort",
    "black",
]
docs = [
    "sphinx~=3.3.1",
    "sphinx-book-theme>=0.0.39,<1.1.0",
    "sphinx-autodoc-typehints~=1.11.1",
    "sphinx-copybutton~=0.3.1",
]

[project.scripts]
run_parsing = "run.run_parsing:main"
run_parsing_reference = "run.run_parsing_reference:main"
run_mine_mp = "run.run_mine_mp:main"
run_featurization = "run.run_featurization:main"

[tool.tox]
legacy_tox_ini = """
[tox]
envlist =
    py{38, 39, 310, 311}

[testenv]
description = Run the pytest tests
deps = pytest
commands = pytest {posargs}
"""